<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/login_padding">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignStart="@+id/login_tv2"
        android:visibility="gone"
        android:layout_alignEnd="@+id/login_tv2"
        android:paddingTop="@dimen/login_btn_padding"/>

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:paddingTop="@dimen/just_login_padding"
        android:text="@string/just_login"
        android:id="@+id/sign_in_simple_button"
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_alignStart="@+id/login_tv2"
        android:layout_alignEnd="@+id/login_tv2"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thetvdb_com"
        android:id="@+id/login_tv2"
        android:layout_above="@+id/login_tv1"
        android:layout_centerHorizontal="true"
        style="@style/LogoStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_tv_database_browser"
        android:id="@+id/login_tv1"
        android:layout_above="@+id/sign_in_simple_button"
        android:layout_alignEnd="@+id/sign_in_button"
        android:layout_alignStart="@+id/sign_in_button"
        android:gravity="center"
        android:paddingBottom="@dimen/logo_padding_bottom"
        style="@style/LogoSecondaryStyle"/>

    <ProgressBar
        android:visibility="invisible"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:indeterminate="true"
        android:layout_height="wrap_content"
        android:id="@+id/login_pb"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>